# TinyBar_v2

./: .gitignore  CMakeLists.txt  README.md
src/: BarManager.cpp  BarManager.h  Battery.cpp  Battery.h  BatteryOld.cpp  BatteryOld.h  Clock.cpp  Clock.h  DBusObject.cpp  DBusObject.h  HyprListener.cpp  HyprListener.h  IpcClient.h  Settings.cpp  Settings.h  UPower.cpp  UPower.h  UPowerDevice.cpp  UPowerDevice.h  UPowerTypes.h  batterynew.h  main.cpp
tests/: TestBattery.cpp
